--- a/src/components/Navigation/Drawer/Drawer.module.css
+++ b/src/components/Navigation/Drawer/Drawer.module.css
@@ -32,10 +32,11 @@
     font-size: 30px;
     text-decoration: none;
     background-color: #fff;
+    position: relative;
     padding: 0 20px 10px 20px;
     transition: opacity .3s;
 }
 
-.Drawer ul li a:hover .active {
+.Drawer ul li a:hover, .active {
     opacity: .7;
 }
